# backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
alembic/versions/: 20260324_0001_init_schema.py
src/apron/: cli_chat.py  config.py  main.py
src/apron/adapters/: browser_ordering.py  claude_llm.py  gemini_llm.py  image_gen.py  inmemory.py  minimax_llm.py  openai_llm.py  ordering_mock.py  system_clock.py  telegram_messaging.py  twilio_whatsapp.py
src/apron/adapters/postgres/: connection.py  repositories.py
src/apron/adapters/sqlite/: repositories.py
src/apron/api/: dashboard.py  deps.py  streaming.py  telegram_webhook.py  webhook.py
src/apron/domain/: enums.py  errors.py  events.py  models.py  rules.py
src/apron/ports/: clock.py  llm.py  messaging.py  ordering.py  repositories.py
src/apron/services/: adk_orchestrator.py  cooking.py  inventory.py  meal_planner.py  onboarding.py  ordering.py  router.py  scheduler.py
tests/: conftest.py
tests/unit/domain/: test_rules.py
tests/unit/services/: test_onboarding.py  test_router.py
