[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apron"
version = "0.1.0"
description = "Apron hackathon demo backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "google-adk>=1.25.0",
  "litellm>=1.81.13",
  "anthropic>=0.34.0",
  "openai>=1.40.0",
  "twilio>=9.3.0",
  "asyncpg>=0.29.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "structlog>=24.3.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
